Switch to Source Sans 3

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -4,7 +4,13 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
-/* color */
+/* N2T Customization ------------------ */
+
+/* Fonts */
+$sans-serif: "Source Code 3", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+
+/* Colors */
 $primary-color: #00778a;
 
 
