--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -7,7 +7,7 @@
 /* N2T Customization ------------------ */
 
 /* Fonts */
-$sans-serif: "Source Code 3", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+$sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 
 /* Colors */
