--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -12,6 +12,8 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 
 /* Colors */
 $primary-color: #00778a;
+$background-color: #f0fbff;
+$text-color: #000d11;
 
 
 /* Variables */
