home layout to splash
home layout to splash

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -12,7 +12,7 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 
 /* Colors */
 $primary-color: #00778a;
-$background-color: #f0fbff;
+$background-color: #fcfeff;
 $text-color: #000d11;
 
 
