--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,5 +18,5 @@
     </ul>
   </div>
   
-  <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }}</div>
+  <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
   
