--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,5 +18,6 @@
     </ul>
   </div>
   
-  <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
+  <div class="page__footer-copyright">N2T.net is a service of the <a>California Digital Library</a>, a division of the <a>University of California Office of the President</a>.</div>
+  <div class= "page_footer-copyright"> &copy; 2007 - {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
   
