trim home.md content
add links to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div>N2T.net is a service of the <a>California Digital Library</a>, a division of the <a>University of California Office of the President</a>.</div>
+<div>N2T.net is a service of the <a href="https://cdlib.org/">California Digital Library</a>, a division of the <a href="https://www.ucop.edu/">University of California Office of the President</a>.</div>
 
 <div class="page__footer-follow">
     <ul class="social-icons">
