--- a/_layouts/interior.html
+++ b/_layouts/interior.html
@@ -2,8 +2,9 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
-
-<section class="page__content" itemprop="text">
-    {{ content }}
-</section>
+<div id="main" role="main">
+    <h1>{{ page.title }}</h1>
+    <section class="page__content" itemprop="text">
+        {{ content }}
+    </section>
+</div>
