index.html experiment
another experiment

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -16,6 +16,8 @@ $background-color: #fcfeff;
 $text-color: #000d11;
 
 
+/* end N2T Customization ------------------- */
+
 /* Variables */
 @import "minimal-mistakes/variables";
 
