--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,13 @@ layout: default
 author_profile: false
 ---
 
+{{ content }}
+
+<!--
 <div id="main" role="main">
     <h1>{{ page.title }}</h1>
     <section class="page__content" itemprop="text">
         {{ content }}
     </section>
 </div>
+-->
