add logo & brand color

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -11,7 +11,7 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 
 /* Colors */
-$primary-color: #00778a;
+$primary-color: #0d846e;
 $background-color: #fcfeff;
 $text-color: #000d11;
 
