--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -15,6 +15,14 @@ $primary-color: #0d846e;
 $background-color: #fcfeff;
 $text-color: #000d11;
 
+/* Image Handling */
+.archive__item-teaser {
+  img {
+    max-width: 100%;
+    max-height: 2em;
+  }
+}
+
 
 /* end N2T Customization ------------------- */
 
