add new homepage content
red experiment

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -17,6 +17,8 @@ $text-color: #000d11;
 
 /* Image Handling */
 .archive__item-teaser {
+  background-color: red;
+  
   img {
     max-width: 100%;
     max-height: 2em;
