--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -15,13 +15,13 @@ $primary-color: #0d846e;
 $background-color: #fcfeff;
 $text-color: #000d11;
 
-/* Image Handling */
+/* Gallery Images  */
 .archive__item-teaser {
   background-color: red;
-  
+  padding: 2em;
+
   img {
-    max-width: 100%;
-    max-height: 2em;
+    width: 50%;
   }
 }
 
