--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -17,11 +17,11 @@ $text-color: #000d11;
 
 /* Gallery Images  */
 .archive__item-teaser {
-  background-color: red;
-  padding: 2em;
+  background-color: $primary-color;
+  padding: 5em;
 
   img {
-    width: 50%;
+    width: 100%;
   }
 }
 
