another stab at a gradient

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -18,7 +18,7 @@ $text-color: #000d11;
 /* Gallery Images  */
 .archive__item-teaser {
   background-color: $primary-color;
-  padding: 5em;
+  padding: 2em 5em;
 
   img {
     width: 100%;
