--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -14,8 +14,7 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 $primary-color: #0d846e;
 $background-color: #fcfeff;
 $text-color: #000d11;
-$gallery-gradient: linear-gradient(55deg, rgba(0,119,139,1) 0%, rgba(13,132,110,1) 32%, rgba(13,132,110,1) 46%, rgba(0,119,139,1) 100%);
-
+$gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139,1) 94%);
 
 /* Homepage Gallery customization  */
 .archive__item-teaser {
