--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -26,7 +26,7 @@ $gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139
   }
 }
 
-.btn {
+a.btn {
   padding: 0.5em 1em 0.5em 0;
 }
 
