another gradient try
comment out orange buttons

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -18,7 +18,7 @@ $text-color: #000d11;
 
 /* Colors: New */
 $gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139,1) 94%);
-$action-color: #EE8B22;
+/* $action-color: #EE8B22; */
 
 /* Homepage Gallery customization  */
 .archive__item-teaser {
@@ -31,7 +31,7 @@ $action-color: #EE8B22;
 }
 
 a.btn {
-  color: $action-color;
+  /* color: $action-color; */
   padding: 0.5em 1em 0.5em 0;
 }
 
