restore color block
set info color to fuscia

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -12,6 +12,7 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 
 /* Colors: Overrides */
 $primary-color: #0d846e;
+$info-color: #D5207D;
 $background-color: #fcfeff;
 $footer-background-color: #BEB6AF;
 $text-color: #000d11;
