--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -13,8 +13,8 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 /* Colors: Overrides */
 $primary-color: #0d846e;
 $info-color: #D5207D;
-$background-color: #fcfeff;
-$footer-background-color: #BEB6AF;
+$background-color: #fff7eb;
+$footer-background-color: #DBD5CD;
 $text-color: #000d11;
 
 /* Colors: New */
