Remove angle brackets
Accept that links don't work in code blocks, for obvious reasons.

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -13,7 +13,7 @@ $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Sego
 /* Colors: Overrides */
 $primary-color: #0d846e;
 $info-color: #D5207D;
-$background-color: #fffdfb;
+$background-color: #fcfffe;
 $footer-background-color: #DBD5CD;
 $text-color: #000d11;
 
