--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -10,18 +10,22 @@
 $sans-serif: "Source Sans 3", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 
-/* Colors: Overrides */
-$primary-color: #0d846e;
-$info-color: #D5207D;
-$background-color: #fcfffe;
-$footer-background-color: #DBD5CD;
-$text-color: #000d11;
-
-/* Colors: New */
-$gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139,1) 94%);
+/* Color Variables: New */
+$n2t-gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139,1) 94%);
+$n2t-white: #fcfffe;
+$n2t-black: #000d11;
 /* $action-color: #EE8B22; */
 
-/* Homepage Gallery customization  */
+  /* Color Variables: Overrides */
+$primary-color: #0d846e;
+$info-color: #ED8B22;
+$text-color: $n2t-black;
+$background-color: $n2t-white;
+$footer-background-color: #DBD5CD;
+
+
+
+/* Homepage customization  */
 .archive__item-teaser {
   background: $gallery-gradient;
   padding: 2em 5em;
@@ -30,6 +34,12 @@ $gallery-gradient: linear-gradient(55deg, rgba(13,132,110,1) 25%, rgba(0,119,139
     width: 100%;
   }
 }
+
+.page_title, .page_lead {
+  opacity: 95%;
+}
+
+
 
 
 
