--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,30 @@
-<img src="/assets/images/wordmark-text-dark-gray.svg" alt="University of California">
 
-<div>N2T.net is a service of the <a href="https://cdlib.org/">California Digital Library</a>, a division of the <a href="https://www.ucop.edu/">University of California Office of the President</a>.</div>
+<div id="footer">
+  <div></div><img src="/assets/images/wordmark-text-dark-gray.svg" alt="University of California"></div>
 
-<div class="page__footer-follow">
-    <ul class="social-icons">
-      {% if site.data.ui-text[site.locale].follow_label %}
-        <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
-      {% endif %}
-  
-      {% if site.footer.links %}
-        {% for link in site.footer.links %}
-          {% if link.label and link.url %}
-            <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer">{% if link.icon %}<i class="{{ link.icon }}" aria-hidden="true"></i>{% endif %} {{ link.label }}</a></li>
+  <div>
+    <div>N2T.net is a service of the <a href="https://cdlib.org/">California Digital Library</a>, a division of the <a href="https://www.ucop.edu/">University of California Office of the President</a>.</div>
+
+    <div class="page__footer-follow">
+        <ul class="social-icons">
+          {% if site.data.ui-text[site.locale].follow_label %}
+            <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
           {% endif %}
-        {% endfor %}
-      {% endif %}
-  
-      {% unless site.atom_feed.hide %}
-        <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
-      {% endunless %}
-    </ul>
-  </div>
-  
- 
-  <div class= "page_footer-copyright"> &copy; 2007 - {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
-  
+      
+          {% if site.footer.links %}
+            {% for link in site.footer.links %}
+              {% if link.label and link.url %}
+                <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer">{% if link.icon %}<i class="{{ link.icon }}" aria-hidden="true"></i>{% endif %} {{ link.label }}</a></li>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+      
+          {% unless site.atom_feed.hide %}
+            <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+          {% endunless %}
+        </ul>
+      </div>
+      
+      <div class= "page_footer-copyright"> &copy; 2007 - {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
+    </div>
+</div>
