Revert "remove footer div"
This reverts commit b552f35341f5f044e51a49814fe2e33ae4b28670.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 
+<div id="footer">
   <div><img src="/assets/images/wordmark-text-dark-gray.svg" alt="University of California"></div>
 
   <div>
@@ -26,3 +27,4 @@
       
       <div class= "page_footer-copyright"> &copy; 2007 - {{ site.time | date: '%Y' }} The Regents of the University of California.</div>
     </div>
+</div>
