--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -45,9 +45,15 @@ a.btn {
   padding: 0.5em 1em 0.5em 0;
 }
 
+.page__footer {
+  font-size: 0.8em;
+}
+
 #footer {
   display: flex;
+  row-gap: 1em;
 }
+
 
 /* end N2T Customization ------------------- */
 
