--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -50,6 +50,7 @@ a.btn {
 
 a.btn::after {
   content: url("/assets/images/angle-right-solid--orange.svg");
+  display: inline-block;
   padding-left: 0.5em;
   height: 1em;
   width: 1em;
