--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -49,7 +49,7 @@ a.btn {
 
 
 a.btn::after {
-  content: url("/assets/images/angle-right-solid--orange.svg");
+  content: url("{{/assets/images/angle-right-solid--orange.svg | relatvie_url }}");
   display: inline-block;
   padding-left: 0.5em;
   height: 1em;
