--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 <div id="footer">
-  <div><img src="/assets/images/wordmark-text-dark-gray.svg" alt="University of California"></div>
+  <div><img src="{{ site.baseurl }}/assets/images/wordmark-text-dark-gray.svg" alt="University of California"></div>
 
   <div>
     <div>N2T.net is a service of the <a href="https://cdlib.org/">California Digital Library</a>, a division of the <a href="https://www.ucop.edu/">University of California Office of the President</a>.</div>
