--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -117,7 +117,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
   margin-top: 0;
 }
 
-.archive_item a.btn {
+.archive_item p a.btn {
   color: $info-color;
   font-size: 1em;
   font-weight: 400;
