--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -103,7 +103,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
   padding: 2em 5em;
 
   img {
-    height: 100%;
+    width: 100%;
     opacity: 0.9;
   }
 }
