--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -168,7 +168,7 @@ a.btn::after {
 
  /* Feature Row-- Lighter version ---------------------*/
 .archive__item-teaser {
-  padding: 2em 0 1.em 0.5em;
+  padding: 2em 0 1.25em 0.5em;
 
   img {
     width: 7em;
