--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -29,8 +29,7 @@ $link-color-hover: mix(#000, $link-color, 25%);
 $link-color-visited: mix(#fff, $link-color, 15%);
 
 
-
-/* end N2T Customization ------------------- */
+/* End N2T custom variables ------------------- */
 
 /* Variables */
 @import "minimal-mistakes/variables";
@@ -111,7 +110,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 }
 
 /* Homepage customization  */
-.page_title, .page_lead {
+.page__title, .page__lead {
   opacity: 0.95;
   color: $n2t-black;
   text-shadow: none;
