--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -116,7 +116,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
   text-shadow: none;
 }
 
-.page__hero-overlay {
+.page__hero--overlay {
   margin-top: 2em;
   margin-bottom: 1em;
 }
