--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -121,6 +121,11 @@ $link-color-visited: mix(#fff, $link-color, 15%);
   margin-bottom: 1em;
 }
 
+.page__hero--overlay .page__title {
+  color: #075144;
+  text-shadow: none;
+}
+
 /* Feature Row-- Darker version ---------------------*/
 /* .archive__item-teaser {
   background: $n2t-gallery-gradient;
