--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -188,7 +188,7 @@ a.btn::after {
 }
 
 .feature__wrapper .archive__item-title {
-  color: #075144;
+  color: $n2t-black;
   font-size: 0.85em;
   font-weight: 700;
   margin-top: 0;
