--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -203,7 +203,7 @@ a.btn {
 
 
 a.btn::after {
-  content: url("{{ site.baseurl }}/assets/images/angle-right-solid--orange.svg");
+  content: url("https://jek-iii.github.io/mmistakes-test/assets/images/angle-right-solid--orange.svg");
   display: inline-block;
   padding-left: 0.5em;
   height: 1em;
