switch to circle arrow
switch to circle arrow

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -203,9 +203,13 @@ a.btn {
 
 
 a.btn::after {
-  content: url("https://jek-iii.github.io/mmistakes-test/assets/images/angle-right-solid--orange.svg");
+  content: url("https://jek-iii.github.io/mmistakes-test/assets/images/circle-arrow-right.svg");
   display: inline-block;
   padding-left: 0.5em;
   height: 1em;
   width: 1em;
+}
+
+a.btn::after svg path {
+  fill: #CC4B00;
 }
