--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -203,13 +203,10 @@ a.btn {
 
 
 a.btn::after {
-  content: url("https://jek-iii.github.io/mmistakes-test/assets/images/circle-arrow-right.svg");
+  content: url("https://jek-iii.github.io/mmistakes-test/assets/images/circle-arrow-right--orange.svg");
   display: inline-block;
-  padding-left: 0.5em;
+  padding-left: 0.3em;
+  vertical-align: sub;
   height: 1em;
   width: 1em;
-}
-
-a.btn::after svg path {
-  fill: #CC4B00;
 }
