--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -72,7 +72,18 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 /* Header and footer */
 .site-logo img {
   max-height: 2.75rem;
+  position: relative;
+  left: -3em;
 }
+
+@media (max-width: 88em) {
+  .site-logo img {
+    position: relative;
+    left: -3em;
+  }
+}
+
+
 
 .page__footer {
   font-size: $footer-type-size;
@@ -209,4 +220,8 @@ a.btn::after {
   vertical-align: sub;
   height: 1em;
   width: 1em;
+}
+
+a.btn:hover {
+  text-decoration: underline;
 }
