change hero text color

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -129,7 +129,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 }
 
 .page__hero--overlay .page__title, .page__hero--overlay .page__lead {
-  color: #075144;
+  color: #022c24;
   text-shadow: none;
 }
 
