--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -129,7 +129,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 }
 
 .page__hero--overlay .page__title, .page__hero--overlay .page__lead {
-  color: $nt2-white;
+  color: $n2t-white;
   text-shadow: 0 0 0.1em rgba(0,0,0,0.75);
 }
 
