--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -130,7 +130,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 
 .page__hero--overlay .page__title, .page__hero--overlay .page__lead {
   color: $n2t-white;
-  text-shadow: 0 0 0.1em rgba(0,0,0,0.75);
+  text-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 
 /* Feature Row-- Darker version ---------------------*/
