--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -74,7 +74,7 @@ $link-color-visited: mix(#fff, $link-color, 15%);
   max-height: 2.75rem;
 }
 
-.site-title {
+.greedy-nav a.site-title {
   display: none;
 }
 
